tester/src/test/aya/failure/syntax/syntax-error.aya.txt
In file $FILE:1:0 ->

  1 | hammer
      ^----^
  
Error: Parser error: extraneous input 'hammer' expecting {<EOF>, 'def', 'struct', 'prim', 'data', 'module', 'open', 'import', 'public', 'private'}
Parsing interrupted due to error(s).
What are you doing?
